# lsystem-plants

./: .gitignore  README.md  hello.py  pyproject.toml
lsysviz/: __init__.py  __main__.py  cli.py  expand.py  render.py  turtle.py  types.py
scripts/: verify.sh
src/lsystem/: __init__.py  __main__.py  bounds.py  cli.py  core.py  presets.py  render_svg.py  turtle.py
tests/: conftest.py  test_bounds.py  test_cli.py  test_core.py  test_determinism.py  test_expand.py  test_golden.py  test_infra.py  test_infrastructure.py  test_package.py  test_presets.py  test_render.py  test_svg.py  test_turtle.py  update_golden.py
tests/fixtures/golden/: bush_segments.json  bush_segments.sha256  fern_segments.json  fern_segments.sha256  weed_segments.json  weed_segments.sha256
