[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "lsystem-plants"
version = "0.1.0"
description = "A minimal, installable skeleton for an L-system plant generator."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "Unknown" }]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
]
dependencies = []

[project.urls]
Repository = "https://github.com/teerev/lsystem-plants"

[tool.hatch.build.targets.wheel]
packages = ["src/lsystem"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
  "ruff>=0.1.0",
  "mypy>=1.0",
]
