[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "lsystem-plants"
version = "0.1.0"
description = "A minimal, installable skeleton for an L-system plant generator."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "Unknown" }]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
]
dependencies = []

[project.urls]
Repository = "https://github.com/teerev/lsystem-plants"

[tool.hatch.build.targets.wheel]
packages = ["src/lsystem"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --cov=lsystem --cov-report=term-missing"

[tool.coverage.run]
source = ["lsystem"]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = false
fail_under = 0

[tool.ruff]
line-length = 88
target-version = "py310"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["lsystem"]

[tool.mypy]
python_version = "3.10"
warn_unused_configs = true
check_untyped_defs = true
disallow_untyped_defs = false
no_implicit_optional = true
warn_return_any = false
warn_unused_ignores = true
warn_redundant_casts = true
warn_unreachable = true

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
  "pytest-cov>=4.0",
  "ruff>=0.1.0",
  "mypy>=1.0",
]
